--- a/src/dev/HfAgentsTut.ipynb
+++ b/src/dev/HfAgentsTut.ipynb
@@ -2544,7 +2544,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dsl-misc",
+   "display_name": "Python 3.12.9 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -2558,7 +2558,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b633fb996f1c862d0f5c09a60957194911e19fc3fbe61c3ea03f80f796c7ecda"
+   }
   }
  },
  "nbformat": 4,
