Reorganized misc.py -> store.py

--- a/src/semantic_search/dev/retrieval_dev.ipynb
+++ b/src/semantic_search/dev/retrieval_dev.ipynb
@@ -42,23 +42,127 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using Docling papers"
+    "### Testing HF embedding model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib import reload\n",
+    "from semantic_search import misc\n",
+    "reload(misc)\n",
+    "from semantic_search.misc import LocalEmbeddingModel, FAISSDocumentStore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded index with 36379 vectors\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LocalEmbeddingModel(chunk_size=256)\n",
+    "store = FAISSDocumentStore(model, db_dir='/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/db/references-1')\n",
+    "\n",
+    "if not store.load_index():\n",
+    "    docs = pd.read_csv('/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/raw-data/metadata/openalex-refs-abstracts.csv')\n",
+    "    docs[docs.abstract.isna()] = ''\n",
+    "    docs['has_abstract'] = docs.abstract.apply(len) > 0\n",
+    "\n",
+    "    docs.rename(columns={'ref_work': 'id', 'abstract': 'text'}, inplace=True)\n",
+    "    docs = docs[docs.has_abstract]\n",
+    "\n",
+    "    store.create_index(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/cluster/home/lcarretero/python_envs/dsl-research-assistant/lib/python3.11/site-packages/torch/utils/_pytree.py:185: FutureWarning: optree is installed but the version is too old to support PyTorch Dynamo in C++ pytree. C++ pytree support is disabled. Please consider upgrading optree using `python3 -m pip install --upgrade 'optree>=0.13.0'`.\n",
-      "  warnings.warn(\n"
+      "Generating embeddings: 100%|██████████| 1/1 [00:00<00:00, 80.94it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'rank': 1,\n",
+       "  'score': 0.8255380603968013,\n",
+       "  'document_id': 'W4292779060',\n",
+       "  'chunk_text': 'faster, and lighter. our code is available in https : / / github. com / rmokady / clip _ prefix _ caption.'},\n",
+       " {'rank': 2,\n",
+       "  'score': 0.8255380603968013,\n",
+       "  'document_id': 'W4246999471',\n",
+       "  'chunk_text': 'faster, and lighter. our code is available in https : / / github. com / rmokady / clip _ prefix _ caption.'},\n",
+       " {'rank': 3,\n",
+       "  'score': 0.8255380603968013,\n",
+       "  'document_id': 'W3047922786',\n",
+       "  'chunk_text': 'faster, and lighter. our code is available in https : / / github. com / rmokady / clip _ prefix _ caption.'},\n",
+       " {'rank': 4,\n",
+       "  'score': 0.8255380603968013,\n",
+       "  'document_id': 'W3209648217',\n",
+       "  'chunk_text': 'faster, and lighter. our code is available in https : / / github. com / rmokady / clip _ prefix _ caption.'},\n",
+       " {'rank': 5,\n",
+       "  'score': 0.7931649042215005,\n",
+       "  'document_id': 'W4401070841',\n",
+       "  'chunk_text': 'available at https : / / github. com / wusize / clipself.'},\n",
+       " {'rank': 6,\n",
+       "  'score': 0.7750313135967208,\n",
+       "  'document_id': 'W4376312115',\n",
+       "  'chunk_text': 'recently, there have been breakthroughs in computer vision ( \" cv \" ) models that are more generalizable with the advent of models such as clip and align. in this paper, we analyze clip and highlight some of the challenges such models pose. clip reduces the need for task specific training data, potentially opening up many niche tasks to automation. clip also allows its users to flexibly specify image classification classes in natural language, which we find can shift how biases manifest. additionally, through some preliminary probes we find that clip can inherit biases found in prior computer vision systems. given the wide and unpredictable domain of uses for such models, this raises questions regarding what sufficiently safe behaviour for such systems may look like. these results add evidence to the growing body of work calling for a change in the notion of a \\' better \\' model - - to move beyond simply looking at higher accuracy at task - oriented capability evaluations, and towards a broader \\' better \\' that takes into account deployment - critical features such as different use contexts, and people who interact with the model when thinking about model deployment.'},\n",
+       " {'rank': 7,\n",
+       "  'score': 0.7750313135967208,\n",
+       "  'document_id': 'W3212632252',\n",
+       "  'chunk_text': 'recently, there have been breakthroughs in computer vision ( \" cv \" ) models that are more generalizable with the advent of models such as clip and align. in this paper, we analyze clip and highlight some of the challenges such models pose. clip reduces the need for task specific training data, potentially opening up many niche tasks to automation. clip also allows its users to flexibly specify image classification classes in natural language, which we find can shift how biases manifest. additionally, through some preliminary probes we find that clip can inherit biases found in prior computer vision systems. given the wide and unpredictable domain of uses for such models, this raises questions regarding what sufficiently safe behaviour for such systems may look like. these results add evidence to the growing body of work calling for a change in the notion of a \\' better \\' model - - to move beyond simply looking at higher accuracy at task - oriented capability evaluations, and towards a broader \\' better \\' that takes into account deployment - critical features such as different use contexts, and people who interact with the model when thinking about model deployment.'},\n",
+       " {'rank': 8,\n",
+       "  'score': 0.7655740603283484,\n",
+       "  'document_id': 'W4386076600',\n",
+       "  'chunk_text': 'potential faulty negative samples in clip - caption contrast by rectifying the alignment target with ot assignment to ensure precise temporal modeling. extensive experiments on video retrieval, videoqa, and action segmentation verify the effectiveness of our method. code is available at https : / / lin - yijie. github. io / projects / norton.'},\n",
+       " {'rank': 9,\n",
+       "  'score': 0.7602765618232337,\n",
+       "  'document_id': 'W4388110348',\n",
+       "  'chunk_text': \"audio description ( ad ) is the task of generating descriptions of visual content, at suitable time intervals, for the benefit of visually impaired audiences. for movies, this presents notable challenges – ad must occur only during existing pauses in dialogue, should refer to characters by name, and ought to aid understanding of the storyline as a whole. to this end, we develop a new model for automatically generating movie ad, given clip visual features of the frames, the cast list, and the temporal locations of the speech ; addressing all three of the ' who ', ' when ', and ' what ' questions : ( i ) who – we introduce a character bank consisting of the character ' s name, the actor that played the part, and a clip feature of their face, for the principal cast of each movie, and demonstrate how this can be used to improve naming in the generated ad ; ( ii ) when – we investigate several models for determining whether an ad should be generated for a time interval or not, based on the visual content of the interval and its neighbours ; and ( iii ) what – we implement a new vision - language model for this task, that can ingest the proposals from the character bank, whilst conditioning on the visual features using cross - attention, and demonstrate how\"},\n",
+       " {'rank': 10,\n",
+       "  'score': 0.7602765618232337,\n",
+       "  'document_id': 'W4387294588',\n",
+       "  'chunk_text': \"audio description ( ad ) is the task of generating descriptions of visual content, at suitable time intervals, for the benefit of visually impaired audiences. for movies, this presents notable challenges – ad must occur only during existing pauses in dialogue, should refer to characters by name, and ought to aid understanding of the storyline as a whole. to this end, we develop a new model for automatically generating movie ad, given clip visual features of the frames, the cast list, and the temporal locations of the speech ; addressing all three of the ' who ', ' when ', and ' what ' questions : ( i ) who – we introduce a character bank consisting of the character ' s name, the actor that played the part, and a clip feature of their face, for the principal cast of each movie, and demonstrate how this can be used to improve naming in the generated ad ; ( ii ) when – we investigate several models for determining whether an ad should be generated for a time interval or not, based on the visual content of the interval and its neighbours ; and ( iii ) what – we implement a new vision - language model for this task, that can ingest the proposals from the character bank, whilst conditioning on the visual features using cross - attention, and demonstrate how\"}]"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "store.search(\"CLIP related works\", top_k=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Docling papers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from importlib import reload\n",
     "from semantic_search import misc\n",
@@ -2644,18 +2748,6 @@
    "display_name": "Python (dsl-research-assistant)",
    "language": "python",
    "name": "dsl-research-assistant"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.6"
   }
  },
  "nbformat": 4,
